Revision history for {{$dist->name}}

{{$NEXT}}

0.047     2014-01-14 05:34:39Z
          - adjusted plugin order so [PkgVersion] gets a chance to insert into
            the first blank line of the package (new in 5.010) before other
            modules insert their code lines
          - pod removed from in the middle of source is now replaced with a
            commented-out version of itself, to avoid altering line numbers

0.046     2014-01-11 19:23:31Z
          - ensure that .pod files are also eligible for indexing
          - minting profile switched to using a dist sharedir to store
            profiles, so we can now ship using Module::Build::Tiny

0.045     2014-01-06 18:32:05Z
          - fixed transposed link text in documentation (thanks, rwstauner!)
          - fixed new tests that fail when run outside a git repository

0.044     2014-01-04 18:46:04Z
          - adjust airplane mode so it performs all (non-network) pre-release
            checks first, before aborting the release
          - minor tweaks to CONTRIBUTING text

0.043     2013-12-14 17:34:14Z
          - stale [@Git] modules now being checked for again

0.042     2013-12-08 00:24:09Z
          - drop use of [-Encoding] Pod::Weaver plugin - no longer needed with
            Pod::Weaver 4
          - update generated CONTRIBUTING file to filter out local plugins
            when running 'dzil authordeps --missing', and to mention the irc
            channel when available
          - new "airplane" mode, to faciliate development while the network is
            not available

0.041     2013-11-29 06:02:08Z
          - add explicit dep on Pod::Markdown, to get the version that creates
            metacpan hyperlinks
          - add [Test::Portability]
          - no longer prompting about stale [@Git] modules

0.040     2013-11-12 17:50:39Z
          - [Git::CheckFor::MergeConflicts] is working again
          - work around failure of minting test where a development release of