@@ -1,6 +1,10 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - removed [PruneCruft], which does nothing useful with
+            [Git::GatherDir]
+          - removed [ManifestSkip] which does nothing useful when there is no
+            MANIFEST.SKIP file
 
 0.047     2014-01-14 05:34:39Z
           - adjusted plugin order so [PkgVersion] gets a chance to insert into
